--- a/styles.css
+++ b/styles.css
@@ -100,40 +100,13 @@ form button:hover {
     background-color: #444;
 }
 
-/* #instagram-feed {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
-    margin: 20px;
-} */
-
-#instagram-feed img {
-    max-width: calc(100% / 3 - 40px); /* Here 40px is twice the margin (20px on each side of an image) */
-    height: auto;
-    margin: 20px;
-    border-radius: 5px;
-    box-sizing: border-box;
+#image-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-#instagram-feed {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 10px;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
-.grid-item {
-  width: 100%;
-  height: 0;
-  padding-bottom: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  transition: transform .2s;
-}
-
-.grid-item:hover {
-  transform: scale(1.02);
+.gallery-item {
+  max-width: 100%;
+  margin: 10px;
 }
