--- a/styles.css
+++ b/styles.css
@@ -39,38 +39,24 @@ section {
     padding: 20px;
 }
 
-#intro {
+#intro, #gallery, #contact {
     background-color: #1a1a1a;
     border-radius: 5px;
     padding: 30px;
     margin: 20px;
 }
 
-#gallery {
-    background-color: #1a1a1a;
-    border-radius: 5px;
-    padding: 30px;
-    margin: 20px;
-}
-
-#instagram-feed {
+#image-gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-#instagram-feed img {
+#image-gallery img {
     max-width: 100%;
     height: auto;
     margin: 10px;
     border-radius: 5px;
-}
-
-#contact {
-    background-color: #1a1a1a;
-    border-radius: 5px;
-    padding: 30px;
-    margin: 20px;
 }
 
 form {
@@ -100,13 +86,19 @@ form button:hover {
     background-color: #444;
 }
 
-#image-gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+.gallery-item {
+    max-width: calc(33% - 20px);
+    margin: 10px;
 }
 
-.gallery-item {
-  max-width: 100%;
-  margin: 10px;
+@media screen and (max-width: 768px) {
+    .gallery-item {
+        max-width: calc(50% - 20px);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .gallery-item {
+        max-width: 100%;
+    }
 }
